Ensure the 'about' page renders well on mobile devices

--- a/frontend/src/app/about-component/about-component.css
+++ b/frontend/src/app/about-component/about-component.css
@@ -5,6 +5,10 @@ div.centre{
     transform: translate(-50%, 0);
 }
 
+div.responsive{
+    width: 800px;
+}
+
 h1, h2{
     text-align: center;
 }
@@ -34,4 +38,17 @@ div.centre div.concept{
     color: #fff;
     font-size: 14px;
     font-weight: 500;
+}
+
+@media screen and (max-width: 1024px){
+    div.responsive{
+        padding: 4vw;
+        width: 92vw;
+    }
+
+    div.centre div.concept{
+        width: 100%;
+        height: 83.63vw;
+        background-size: cover;
+    }
 }
